istio/gateway/public-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: public-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https-app-lynceus-ai
        protocol: HTTPS
      tls:
        mode: MUTUAL
        credentialName: app-lynceus-ai-credential
      hosts:
        - "app.lynceus.ai"
    - port:
        number: 443
        name: https-podinfo-app-lynceus-ai
        protocol: HTTPS
      tls:
        mode: MUTUAL
        credentialName: podinfo-app-lynceus-ai-credential
      hosts:
        - "podinfo.app.lynceus.ai"
    - port:
        number: 443
        name: https-docs-app-lynceus-ai
        protocol: HTTPS
      tls:
        mode: MUTUAL
        credentialName: docs-app-lynceus-ai-credential
      hosts:
        - "docs.app.lynceus.ai"
    - port:
        number: 443
        name: https-pypi-app-lynceus-ai
        protocol: HTTPS
      tls:
        mode: MUTUAL
        credentialName: pypi-app-lynceus-ai-credential
      hosts:
        - "pypi.app.lynceus.ai"
    - port:
        number: 443
        name: https-metering-monitoring-app-lynceus-ai
        protocol: HTTPS
      tls:
        mode: MUTUAL
        credentialName: metering-monitoring-app-lynceus-ai-credential
      hosts:
        - "metering.monitoring.app.lynceus.ai"
    - port:
        number: 443
        name: https-tracing-monitoring-app-lynceus-ai
        protocol: HTTPS
      tls:
        mode: MUTUAL
        credentialName: tracing-monitoring-app-lynceus-ai-credential
      hosts:
        - "tracing.monitoring.app.lynceus.ai"
    - port:
        number: 443
        name: https-dashboard-monitoring-app-lynceus-ai
        protocol: HTTPS
      tls:
        mode: MUTUAL
        credentialName: dashboard-monitoring-app-lynceus-ai-credential
      hosts:
        - "dashboard.monitoring.app.lynceus.ai"
